--- a/style.css
+++ b/style.css
@@ -1,18 +1,58 @@
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: 'Lato', sans-serif;
 }
 
-header{
+.paragraph {
+    color: rgba(39, 39, 39, 0.60);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+.btn {
+
+    padding: 15px 35px;
+    background-color: #E55473;
+    border-radius: 8px;
+    border: none;
+    outline: none;
+    color: white;
+    /* font-size: 20px; */
+    font-size: 18px;
+    font-weight: 700;
+}
+
+header {
     /* background-image: url('images/pngwing\ 10.png');
     background-repeat: no-repeat;
     background-position: right;
     background-size: contain; */
     background-color: rgba(229, 84, 115, 0.10);
     height: 600px;
-    padding: 0px 240px;
+    padding: 0px 175px;
     display: flex;
     align-content: space-between;
     align-items: center;
+}
+
+header div {
+    width: 50%;
+    background-color: aqua;
+}
+
+.header-heading {
+    color: #272727;
+    font-size: 60px;
+    font-weight: 800;
+}
+
+.header-description{
+    margin: 32px 0px;
+}
+
+.header-img {
+    width: 100%;
+
 }
