--- a/style.css
+++ b/style.css
@@ -195,3 +195,22 @@ section {
     width: 218px;
     height: 310px;
 }
+
+.insta-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 24px;
+}
+
+.flower-image-container{
+    display: flex;
+    align-items: center;
+    gap: 24px;
+}
+
+.flower-image-container img{
+    width: 232px;
+    height: 280px;
+}
