--- a/style.css
+++ b/style.css
@@ -183,7 +183,8 @@ section {
     width: 60%;
 }
 
-.hot-deal-description-container >h3,p{
+.hot-deal-description-container>h3,
+p {
     margin-bottom: 24px;
 }
 
@@ -196,7 +197,7 @@ section {
     height: 310px;
 }
 
-.insta-container{
+.insta-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -204,13 +205,37 @@ section {
     gap: 24px;
 }
 
-.flower-image-container{
+.flower-image-container {
     display: flex;
     align-items: center;
     gap: 24px;
 }
 
-.flower-image-container img{
+.flower-image-container img {
     width: 232px;
     height: 280px;
+}
+
+.subscribe-section div {
+    padding: 80px 0px;
+    background-image: url('images/Rectangle\ 9.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.subscription-form{
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+.subscription-form input[type="email"] {
+    padding: 15px 35px;
+    width: 400px;
+    border-radius: 8px;
+    background: #FFF;
+    border: none;
+    outline: none;
 }
