--- a/style.css
+++ b/style.css
@@ -226,11 +226,13 @@ p {
     align-items: center;
     justify-content: center;
 }
-.subscription-form{
+
+.subscription-form {
     display: flex;
     align-items: center;
     gap: 16px;
 }
+
 .subscription-form input[type="email"] {
     padding: 15px 35px;
     width: 400px;
@@ -238,4 +240,18 @@ p {
     background: #FFF;
     border: none;
     outline: none;
+}
+
+footer {
+    background-color: #111010;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 24px;
+    padding: 128px 0px;
+}
+
+.footer-heading ,.footer-description,footer>small {
+    color: white;
 }
